--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@ Released   : 20080125
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>Nature's Charm by Free CSS Templates</title>
+<title>Robertson college Blog</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" media="screen" />
